--- a/.github/workflows/auto-bump.yml
+++ b/.github/workflows/auto-bump.yml
@@ -1,9 +1,8 @@
 name: Auto Bump all packages
 on:
   schedule:
-    # 每周日凌晨2点运行
-    - cron: "0 2 * * 0"
-  workflow_dispatch: # 允许手动触发
+    - cron: "0 17 * * 0"
+  workflow_dispatch:
     inputs:
       bumpNumber:
         description: "Increase for each bump in the same day"
@@ -16,7 +15,7 @@ permissions:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest # 使用 GitHub 默认的 runner
+    runs-on: ubuntu-latest
     timeout-minutes: 1440
     steps:
       - name: Install Nix
@@ -32,13 +31,17 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Configure sandboxing
+        run: |
+          sed -i -e '/^build-users-group =/d' -e 's/max-jobs =.*/max-jobs = 8/g' /etc/nix/nix.conf
+          nix eval ./maintenance#_dev.nixConfig --json | jq -r 'to_entries[] | "\(.key) = \(.value | join(" "))"' >> /etc/nix/nix.conf
+
       - name: Configure git
         run: |
           set -e
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-      # the bump itself
       - name: Update all packages
         id: build
         run: |
@@ -52,7 +55,7 @@ jobs:
       - name: Add labels to the created PR
         if: success()
         run: |
-          bump_number=${{ inputs.bumpNumber || 1 }}
+          bump_number=${{ inputs.bumpNumber }}
           current_date=$(date '+%Y%m%d')
           branch_name="bump/$current_date-$bump_number"
 
