re-introduce zed-editor-git

--- a/garnix.yaml
+++ b/garnix.yaml
@@ -9,5 +9,7 @@ builds:
     - "packages.x86_64-linux.wayland-protocols_git"
     - "packages.x86_64-linux.libdrm_git"
     - "packages.x86_64-linux.libdrm32_git"
-        
+    - "packages.x86_64-linux.zed-editor_git"
+    - "packages.x86_64-linux.zed-editor-fhs_git"
+
   exclude: []
